# file-extension-websocket

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py
file_extension/: apps.py  consumers.py  routing.py  urls.py  views.py
templates/: upload_form.html
