[tool.poetry]
name = "file-extension-websocket"
version = "0.1.0"
description = ""
authors = ["Karim Tayie <karimsherif2597@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
channels = {extras = ["daphne"], version = "^4.0.0"}
python-magic = "^0.4.27"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
